@@ -10,7 +10,7 @@ set(libmt32emu_VERSION_MINOR 5)
 set(libmt32emu_VERSION_PATCH 0)
 set(libmt32emu_VERSION "${libmt32emu_VERSION_MAJOR}.${libmt32emu_VERSION_MINOR}.${libmt32emu_VERSION_PATCH}")
 
-if(${munt_WITH_MT32EMU_SMF2WAV} OR ${munt_WITH_MT32EMU_QT})
+if(${munt_WITH_MT32EMU_SMF2WAV} OR ${munt_WITH_MT32EMU_QT} OR ${munt_WITH_MT32EMU_WIN32DRV})
   set(libmt32emu_STANDALONE_BUILD FALSE)
 else()
   set(libmt32emu_STANDALONE_BUILD TRUE)
