@@ -1,39 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 10.00
-# Visual C++ Express 2008
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "mt32emu", "mt32emu\mt32emu_msvc.vcproj", "{063A149D-E48C-499B-B13F-7A70C140A662}"
-EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "mm_win32drv", "mm_win32drv.vcproj", "{A2520089-575E-43BD-A242-EF61D3044B71}"
-	ProjectSection(ProjectDependencies) = postProject
-		{063A149D-E48C-499B-B13F-7A70C140A662} = {063A149D-E48C-499B-B13F-7A70C140A662}
-	EndProjectSection
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Debug|Win32 = Debug|Win32
-		Debug|x64 = Debug|x64
-		Release|Win32 = Release|Win32
-		Release|x64 = Release|x64
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Debug|Win32.ActiveCfg = Debug|Win32
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Debug|Win32.Build.0 = Debug|Win32
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Debug|x64.ActiveCfg = Debug|x64
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Debug|x64.Build.0 = Debug|x64
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Release|Win32.ActiveCfg = Release|Win32
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Release|Win32.Build.0 = Release|Win32
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Release|x64.ActiveCfg = Release|x64
-		{063A149D-E48C-499B-B13F-7A70C140A662}.Release|x64.Build.0 = Release|x64
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Debug|Win32.ActiveCfg = Debug|Win32
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Debug|Win32.Build.0 = Debug|Win32
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Debug|x64.ActiveCfg = Debug|x64
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Debug|x64.Build.0 = Debug|x64
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Release|Win32.ActiveCfg = Release|Win32
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Release|Win32.Build.0 = Release|Win32
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Release|x64.ActiveCfg = Release|x64
-		{A2520089-575E-43BD-A242-EF61D3044B71}.Release|x64.Build.0 = Release|x64
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-EndGlobal
