@@ -1,3 +1,10 @@
+HEAD:
+
+	* Updated mt32emu library to version 2.5.0.
+	* Added support for partial bitwise ROM dumps (#58). Now, the synth can operate with
+	  a pair of control ROM files and a pair of PCM ROM files, which are merged when needed.
+	* Build: Replaced obsolete project files for MS Visual Studio with a CMake build script.
+
 2021-01-17:
 
 	1.6.0 released.
